Bug 166968 - A11Y sidebar hides direct formatting issues after PDF export
Summary: A11Y sidebar hides direct formatting issues after PDF export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2025-06-12 14:29 UTC by Gabor Kelemen (Collabora)
Modified: 2025-06-18 08:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The accessibility sidebar after opening the file (171.44 KB, image/png)
2025-06-12 14:29 UTC, Gabor Kelemen (Collabora)
Details
The accessibility sidebar after exporting the file to PDF (169.29 KB, image/png)
2025-06-12 14:30 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-06-12 14:29:35 UTC
Created attachment 201232 [details]
The accessibility sidebar after opening the file

When a file has too many direct formatting related accessibility issues on the sidebar, those appear upon opening the file, but get hidden after exporting a PDF.

1. Open attachment 123123 [details] (just some random file I had at hand)
2. Open the accessibility sidebar, notice there are many issues listed under Formatting -> Direct Formatting
3. Press the Export directly to PDF button on the toolbar, save the PDf
-> from the accessibility sidebar the Direct Formatting subcategory disappears, while the others stay.

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 87b3b8e6990b394baa74aec8701cd097f6c0c646
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started with 25.2 commit:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e081e03342ca8c262403bd9febdc01151a2935be

author	Noel Grandin <noel.grandin@collabora.co.uk>	2024-08-11 14:34:51 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2024-08-12 08:34:12 +0200
commit e081e03342ca8c262403bd9febdc01151a2935be (patch)

prevent accessibility check from locking up the UI

there is probably a better approach, and there should be a UI warning
that the list is truncated
Comment 1 Gabor Kelemen (Collabora) 2025-06-12 14:30:10 UTC
Adding CC to: Noel Grandin
Comment 2 Gabor Kelemen (Collabora) 2025-06-12 14:30:34 UTC
Created attachment 201233 [details]
The accessibility sidebar after exporting the file to PDF
Comment 3 Noel Grandin 2025-06-12 16:22:43 UTC
I will revert my perf fix, and then leave the performance issue up to the person who implemented this (i.e. Samuel Mehrbrodt)
Comment 4 Commit Notification 2025-06-13 07:40:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d73330a77fbf0b5d975d713fb28cac2a7be39495

tdf#166968 A11Y sidebar hides direct formatting issues after PDF export

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-06-17 15:08:34 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32501882c64e5abaefe2c979afb493b0e378e46a

Related: tdf#166968 - A11Y - remove unnecessary elements from the entries

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-06-18 08:00:43 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/2239e2f813879b7b9a6a36350fd5d8d340a13388

Related: tdf#166968 - A11Y - remove unnecessary elements from the entries

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-18 08:00:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b297dc8b22001e34f1caad0c4810329610716300

tdf#166968 A11Y sidebar hides direct formatting issues after PDF export

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.