tdf#166968 A11Y sidebar hides direct formatting issues after PDF export

Revert "prevent accessibility check from locking up the UI"

This reverts commit e081e03342ca8c262403bd9febdc01151a2935be.

Since it seems to cause problems.

Change-Id: I278e51260bc921ff14ab6474a12bedf073ddc3dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186427
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit d73330a77fbf0b5d975d713fb28cac2a7be39495)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186448
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>